--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "abiturma/laravel-latex": "^1.0",
         "barryvdh/laravel-dompdf": "^1.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.75",
+        "ismaelw/laratex": "dev-main",
+        "laravel/framework": "^8.83",
         "laravel/jetstream": "^2.8",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.10"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
