--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=mecanica
+DB_DATABASE=u976653828_db_mecanica
 DB_USERNAME=root
 DB_PASSWORD=
 
